--- a/public/map.html
+++ b/public/map.html
@@ -2,16 +2,21 @@
 <html>
 <head>
     <style type="text/css">
-        html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+        html, body, .map { height: 100%; margin: 0; padding: 0;}
     </style>
+</head>
+
+<body ng-app="myApp">
+
+    <div class="map" id="map-canvas" ng-controller="MainCtrl"></div>
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&extension=.js&signed_in=true"></script>
     <script src="javascripts/map.js"></script>
     <script src="javascripts/resource.js"></script>
-</head>
-<body ng-app="myApp">
-<div id="map-canvas" ng-controller="MainCtrl"></div>
 </body>
 </html>
