fix timezone issue

--- a/public/mapchat.html
+++ b/public/mapchat.html
@@ -61,7 +61,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="javascripts/map.js"></script>
 <script src="javascripts/resource.js"></script>
-<script src="javascripts/lib/moment.min.js"></script>
-<script src="javascripts/lib/moment-timezone.min.js"></script>
 <script src="javascripts/lib/jstz-1.0.4.min.js"></script>
+<script src="javascripts/lib/moment.min.js"></script>
+<script src="javascripts/lib/moment-timezone-with-data.js"></script>
 </html>
