change to use connection pool. Costmatic UI change

--- a/public/mapchat.html
+++ b/public/mapchat.html
@@ -23,7 +23,7 @@
             <div class="col-sm-6">
                 <ul class="list-unstyled">
                     <li ng-repeat="chat in chats track by $index" class="messages">
-                        <mark>{{chat.id}}</mark> <time>{{chat.time | showLocalTime}}</time> <mark>{{chat.msg}}</mark>
+                        🅿️<mark>{{chat.id}}</mark> <time>{{chat.time | showLocalTime}}</time> <mark>{{chat.msg}}</mark>
                     </li>
                 </ul>
             </div>
