fix bug that info window not shown after recenter; fix bug that resolution is bad on mobile device; added caching on client side

--- a/public/mapchat.html
+++ b/public/mapchat.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="css/map.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
@@ -9,7 +10,7 @@
 <body ng-app="myApp">
 
 <div class="container">
-    <h1>NYC Parking Information</h1>
+    <h3>NYC Parking Information</h3>
     <div id="map-canvas" ng-controller="MainCtrl"></div>
 </div>
 
