--- a/public/mapchat.html
+++ b/public/mapchat.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
+    <meta name="viewport"
+          content="user-scalable=no, initial-scale=1, width=device-width, target-densitydpi=device-dpi, minimal-ui"/>
 
     <link rel="stylesheet" type="text/css" href="css/map.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -9,10 +10,70 @@
 </head>
 
 <body ng-app="myApp">
+<div ng-controller="MainCtrl">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">NYC Parking</a>
+            </div>
 
-<div class="container">
-    <h3>NYC Parking Information</h3>
-    <div id="map-canvas" ng-controller="MainCtrl"></div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                <form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                        <label for="inputDate" class="control-label sr-only">Date</label>
+
+                        <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                            <input type="date" class="form-control input-sm" id="inputDate" ng-model="inputDate">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputTime" class="control-label sr-only">Time</label>
+
+                        <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-time"></span></span>
+                            <input type="time" class="form-control input-sm" id="inputTime" ng-model="inputTime">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputDuration" class="control-label sr-only">Duration</label>
+
+                        <div class="input-group">
+                            <span class="input-group-addon">Duration</span></span>
+                            <input type="number" class="form-control input-sm" id="inputDuration"
+                                   min="1" max="24"
+                                   ng-model="inputDuration">
+                            <span class="input-group-addon">Hour</span></span>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-default btn-sm" data-toggle="collapse" name="navForm"
+                            ng-submit="navForm.$valid && refreshAvailability()"
+                            data-target="#bs-example-navbar-collapse-1"><span class="glyphicon glyphicon-search"></span>
+                    </button>
+                </form>
+
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+    <div class="container" id="map-container">
+        <div class="row">
+            <div id="map-canvas"></div>
+        </div>
+    </div>
 </div>
 
 
@@ -25,7 +86,10 @@
             <div class="col-sm-6">
                 <ul class="list-unstyled">
                     <li ng-repeat="chat in chats track by $index" class="messages">
-                        🅿️<mark>{{chat.id}}</mark> <time>{{chat.time | showLocalTime}}</time> <mark>{{chat.msg}}</mark>
+                        🅿️
+                        <mark>{{chat.id}}</mark>
+                        <time>{{chat.time | showLocalTime}}</time>
+                        <mark>{{chat.msg}}</mark>
                     </li>
                 </ul>
             </div>
@@ -33,12 +97,16 @@
             <div class="col-sm-6">
                 <form novalidate name="chatForm" class="simple-form" ng-submit="chatForm.$valid && submit()">
                     <p>
-                        User name: <input id="userNameInput" type="text" autocomplete="off" ng-model="userName" required maxlength="16"/>
+                        User name: <input id="userNameInput" type="text" autocomplete="off" ng-model="userName" required
+                                          maxlength="16"/>
                     </p>
+
                     <p>Share your parking information: </p>
+
                     <div class="row">
                         <div class="col-sm-10">
-                            <input id="chatInput" type="text" autocomplete="off" ng-model="msg" required maxlength="140"/>
+                            <input id="chatInput" type="text" autocomplete="off" ng-model="msg" required
+                                   maxlength="140"/>
                         </div>
                         <div class="col-sm-2">
                             <button id="chatButton">GO</button>
@@ -54,7 +122,8 @@
 </div>
 
 </body>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&extension=.js&signed_in=true"></script>
+<script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?v=3.exp&extension=.js&signed_in=true"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
