--- a/public/mapchat.html
+++ b/public/mapchat.html
@@ -29,7 +29,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-                <form class="navbar-form navbar-left" role="search">
+                <form class="navbar-form navbar-left" role="search" name="navForm" ng-submit="navForm.$valid && refreshAvailability()">
                     <div class="form-group">
                         <label for="inputDate" class="control-label sr-only">Date</label>
 
@@ -57,9 +57,7 @@
                             <span class="input-group-addon">Hour</span></span>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-default btn-sm" data-toggle="collapse" name="navForm"
-                            ng-submit="navForm.$valid && refreshAvailability()"
-                            data-target="#bs-example-navbar-collapse-1"><span class="glyphicon glyphicon-search"></span>
+                    <button class="btn btn-default btn-sm"><span class="glyphicon glyphicon-search"></span>
                     </button>
                 </form>
 
@@ -77,6 +75,7 @@
 </div>
 
 
+<!--
 <div class="container">
     <div class="row">
         <hr>
@@ -120,6 +119,7 @@
         <hr>
     </div>
 </div>
+-->
 
 </body>
 <script type="text/javascript"
@@ -129,6 +129,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.0/lodash.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="javascripts/map.js"></script>
 <script src="javascripts/resource.js"></script>
