--- a/public/mapchat.html
+++ b/public/mapchat.html
@@ -22,14 +22,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">NYC Parking</a>
+                <a class="navbar-brand" href="#">
+                    <img src="/images/icon.png"> Find free parking in NYC
+                </a>
             </div>
 
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-                <form class="navbar-form navbar-left" role="search" name="navForm" ng-submit="navForm.$valid && refreshAvailability()">
+                <form class="navbar-form navbar-left" role="search" name="navForm"
+                      ng-submit="navForm.$valid && refreshAvailability()">
                     <div class="form-group">
                         <label for="inputDate" class="control-label sr-only">Date</label>
 
