--- a/public/mapchat.html
+++ b/public/mapchat.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/map.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <title>NYC parking regulations - alternate side parking</title>
 </head>
 
 <body ng-app="myApp">
